# MARL_incentives

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
Trip Incentive MARL - Emissions/: RL_TAP_Incentives_budget.ipynb  config.sumocfg  costMemory.py  demo_361.rou.alt  duaIterate.py  emissions_per_lane.txt  emissions_per_second.txt  emissions_per_vehicle.txt  plots.ipynb
Trip Incentive MARL - Emissions/co2Emissions/: co2modeler_v1.py  xmlreader.py
Trip Incentive MARL - Emissions/co2Emissions/.ipynb_checkpoints/: xmlreader-checkpoint.py
Trip Incentive MARL - Emissions/results/.ipynb_checkpoints/: RL_TAP_Incentives_budget-checkpoint.ipynb
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
marl_incentives/src/co2Emissions/: __init__.py  calculate_emissions.py  co2modeler_v1.py  xmlreader.py
marl_incentives/src/co2Emissions/.ipynb_checkpoints/: co2modeler_v1-checkpoint.py
marl_incentives/src/marl_incentives/: environment.py  traveller.py
marl_incentives/src/utils/: __init__.py  utils.py  xml_manipulation.py
scripts/: config.yaml  dqn_continuous_state_exp_replay.py  generate_plots.py  generate_plots.yaml  plots_config.yaml  qlearning_binary_state_exp_replay.py  qlearning_binary_state_exp_replay.yaml  qlearning_discrete_state_exp_replay.py  qlearning_discrete_state_exp_replay.yaml  qlearning_no_state.py  qlearning_no_state.yaml  qlearning_no_state_exp_replay.py  qlearning_no_state_exp_replay.yaml  qlearning_sumo_surrogate.py  qlearning_sumo_surrogate.yaml  run_incentives.py  run_incentives_budget_state.py  run_incentives_budget_state.yaml  run_incentives_experience_replay.py  run_incentives_experience_replay.yaml  run_incentives_qlearning.py  run_schduler.py  thompson_sampling.py  thompson_sampling.yaml
src/co2Emissions/: xmlreader.py
src/marl_incentives/: __init__.py
