[project]
name = "marl-incentives"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Germán Pardo-González", email = "germanrpardo1@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pre-commit>=4.2.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sumolib>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
      packages = ["src/co2Emissions"]

