[project]
name = "marl-incentives"
version = "0.1.0"
description = "MARL incentives algorithm"
readme = "README.md"
authors = [
    { name = "Germán Pardo-González", email = "germanrpardo1@outlook.com" }
]
requires-python = ">=3.13"

dependencies = [
    "hatchling>=1.27.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "myst-parser>=4.0.1",
    "notebook>=7.4.7",
    "numpy>=2.3.2",
    "pre-commit>=4.2.0",
    "setuptools>=61.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.0.2",
    "sumolib>=1.24.0",
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
      packages = ["src/co2Emissions"]

